Update the content on the homepage
Added some lorem ipsum on the homepage

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 <body>
     <h1>Hello, world!</h1>
+    <p>This is my first ever website, it's pretty great!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut velit ab accusantium dolorum at non sequi molestiae iusto dicta iure, vel, nulla aut mollitia. Asperiores aut esse nesciunt vero quidem.</p>
+    <p>Ipsam voluptate impedit deleniti modi aut iste esse nemo doloremque. Recusandae, quidem, sapiente aliquam earum saepe similique, autem, ipsa voluptatibus eveniet nesciunt tenetur aspernatur. Odit pariatur numquam consectetur ipsam mollitia.</p>
+    <p>Atque nesciunt cupiditate ullam eligendi deleniti aperiam vitae consectetur itaque, alias architecto optio quos minima quidem autem rem ipsa obcaecati. Voluptate sequi quo minima ipsum. Unde, molestias natus nihil minima!</p>
+    <p>Beatae laboriosam, voluptates illo ad quisquam natus provident possimus. Culpa voluptatibus nemo quis, placeat rem explicabo cum? Fuga voluptatum sapiente maxime perferendis modi impedit quas iusto ipsam! Eius, hic, ex.</p>
 
     <script src="js/main.js"></script>
 </body>
